# SkibidiRizz

./: .gitignore  DEVELOPMENT.md  README.md  main.py  pyproject.toml
skibidirizz/: __main__.py  main.py
